--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     },
     "rules": {}
   },
+  "jshintConfig": {
+    "esversion": 6
+  },
   "browserslist": [
     "> 1%",
     "last 2 versions",
